--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header__contacts">
                 <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                <button class="button">заказать звонок</button>
+                <button data-modal="consultation" class="button">заказать звонок</button>
                 </div>
             </header>
 
@@ -45,7 +45,7 @@
                    </div>
                 </div>
 
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -440,6 +440,105 @@
             </div>
         </div>
     </section>
+
+    <section class="reviews">
+        <div class="container">
+            <div class="title">отзывы клиентов</div>
+            <div class="reviews__item">
+                    <img src="img/iryna.png" alt="iryna">
+                    <div class="reviews__text">
+                        <div class="reviews__subtitle">Ирина Иванченко </div>
+                        <div class="reviews__count">2 полумарафона</div>
+                        <div class="reviews__descr">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, 
+                            который подошёл именно под 
+                            мои цели и финансовые возможности.
+                            Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.
+                            <br><br>
+                            Новые цели - новый гаджет!
+                            <br><br>
+                            Спасибо, RunSmart! </div>
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="container">
+                <div class="reviews__item">
+                        <img src="img/ivan.png" alt="ivan">
+                        <div class="reviews__text">
+                            <div class="reviews__subtitle">Иван Сёмочкин</div>
+                            <div class="reviews__count">1 полумарафон</div>
+                            <div class="reviews__descr">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. Купил 
+                                пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. 
+                                Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br> С ними подготовился к своему первому полумарафону!
+                                 Спасибо!!!</div>
+                        </div>
+    
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="reviews__item">
+                            <img src="img/yulia.png" alt="yulia">
+                            <div class="reviews__text">
+                                <div class="reviews__subtitle">Юлия Дашкина</div>
+                                <div class="reviews__count">2 полумарафона</div>
+                                <div class="reviews__descr">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. 
+                                    От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. <br> Позвонила, ребята поинтересовались моими целями и 
+                                    подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 
+                                    полумарафона и несколько более коротких забегов и не намерена останавливаться! <br> Спасибо!!!</div>
+                            </div>
+        
+                        </div>
+                    </div>
+    </section>
+
+    <footer class="footer">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4304816259196!2d37.64442107680579!3d55.768394973089954!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1681758320623!5m2!1sru!2sua" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
+            <a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#" class="footer__social-item"><img src="icons/facebook.png" alt="facebook"></a>
+                <a href="#" class="footer__social-item"><img src="icons/instagram.png" alt="instagram"></a>
+                <a href="#" class="footer__social-item"><img src="icons/pinterest.png" alt="pinterest"></a>
+            </div>
+
+        </div>
+    </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form class="feed-form feed-form_mt25" action="#">
+                <input name="name" required placeholder="Ваше имя" type="text">
+                <input name="phone" required placeholder="Ваш телефон" type="number">
+                <input name="email" required placeholder="Ваш e-mail" type="email">
+
+                <button class="button button_submit"  >заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+        </div>
+    </div>
+
+    <div class="modal" id="order">
+        <div class="modal__close">&times;</div>
+        <div class="modal__subtitle">Ваш заказ:</div>
+        <div class="modal__descr">Пульсометр Polar FT1</div>
+        <form class="feed-form feed-form_mt25" action="#">
+            <input name="name" required placeholder="Ваше имя" type="text">
+            <input name="phone" required placeholder="Ваш телефон" type="number">
+            <input name="email" required placeholder="Ваш e-mail" type="email">
+
+            <button class="button button_submit">Купить</button>
+        </form>
+    </div>
+
+    <div class="modal modal_mini" id="thanks">
+        <div class="modal__close">&times;</div>
+        <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+        <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
